[project]
name = "langgraph-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=1.3.0",
    "langchain-google-genai>=4.2.2",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.9",
    "python-dotenv>=1.2.2",
]
